# react-native-demo-provider

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-demo-provider.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/demoprovider/: DemoProviderModule.java  DemoProviderPackage.java
cpp/: react-native-demo-provider.cpp  react-native-demo-provider.h
cpp/nativecalc/: Cargo.toml  build.sh  ios.sh
cpp/nativecalc/nativecalc.xcframework/: Info.plist
cpp/nativecalc/src/: lib.rs
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/demoproviderexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/DemoProviderExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/DemoProviderExample.xcodeproj/: project.pbxproj
example/ios/DemoProviderExample.xcodeproj/xcshareddata/xcschemes/: DemoProviderExample.xcscheme
example/ios/DemoProviderExample.xcworkspace/: contents.xcworkspacedata
example/ios/DemoProviderExampleTests/: DemoProviderExampleTests.m
example/src/: App.tsx
ios/: DemoProvider.h  DemoProvider.mm
src/: NativeDemoProvider.ts  index.tsx
